--- a/music.html
+++ b/music.html
@@ -65,77 +65,9 @@
                         </audio>
                         
                         <ul id="playlist">
-                            <li data-src="musics\C418 - Mice on Venus - Minecraft Volume Alpha.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer; border-bottom: 1px solid #ddd;">
-                                <span>Mice On Venus</span>
-                                <span>04:41</span>
-                            </li>
-                            <li data-src="musics\Pink Floyd - Wish You Were Here.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer; border-bottom: 1px solid #ddd;">
-                                <span>Wish You Were Here</span>
-                                <span>04:53</span>
-                            </li>
-                            <li data-src="musics\Billy Joel - Piano Man (Audio).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer; border-bottom: 1px solid #ddd;">
-                                <span>Piano Man</span>
-                                <span>05:40</span>
-                            </li>
-                            <li data-src="musics\Ziggy Stardust (2012 Remaster).mp3 " style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Ziggy Stardust (2012 Remaster)</span>
-                                <span>03:13</span>
-                            </li>  
-                            <li data-src="musics\Rock 'n' Roll Suicide (2012 Remaster).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Rock 'n' Roll Suicide (2012 Remaster)</span>
-                                <span>02:58</span>
-                            </li> 
-                            <li data-src="musics\La Vie En Rose.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>La Vie En Rose</span>
-                                <span>03:07</span>
-                            </li>
-                            <li data-src="musics\陶喆  寂寞的季節 (HQ).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>寂寞的季節</span>
-                                <span>03:35</span>
-                            </li>
-                            <li data-src="musics\Satie - Gymnopédie No. 1.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Gymnopédie No. 1.mp3</span>
-                                <span>04:04</span>
-                            </li>
-                            <li data-src="musics\Just the Two of Us (feat. Bill Withers).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Just the Two of Us</span>
-                                <span>07:18</span>
-                            </li>
-                            <li data-src="musics\Hikaru Shirosu - Waltz No. 1, Op. 6 'Collapse'  performed on piano by Vikakim..mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Waltz No. 1, Op. 6 'Collapse'</span>
-                                <span>02:01</span>
-                            </li>
-                            <li data-src="musics\Bob Dylan - Knockin' On Heaven's Door (Official Audio).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Knockin' On Heaven's Door</span>
-                                <span>02:31</span>
-                            </li>
-                            <li data-src="musics\Bob Dylan - Hurricane (Official Audio).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Hurricane</span>
-                                <span>08:34</span>
-                            </li>
-                            <li data-src="musics\Fairy Fountain.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Fairy Fountain</span>
-                                <span>01:03</span>
-                            </li>
-                            <li data-src="musics\Let It Be (Remastered 2009).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Let It Be</span>
-                                <span>04:03</span>
-                            </li>
-                            <li data-src="musics\Ballerina.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Ballerina</span>
-                                <span>01:11</span>
-                            </li>
-                            <li data-src="musics\Breakfast at Tiffany's (39) Movie CLIP - Moon River (1961) HD.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Moon River</span>
-                                <span>02:15</span>
-                            </li>
-                            <li data-src="musics\evening.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>evening</span>
-                                <span>04:17</span>
-                            </li>
-                            <li data-src="musics\Sparks.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
-                                <span>Sparks</span>
-                                <span>03:47</span>
+                            <li data-src="musics\xxx.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer; border-bottom: 1px solid #ddd;">
+                                <span>Name</span>
+                                <span>tqdm</span>
                             </li>                  
                         </ul>
                     </div>
@@ -356,3 +288,4 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
