--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="music.html">Music Room</a></li>
+                <!--<li><a href="music.html">Music Room</a></li>-->
             </ul>
         </nav>
         <!-- Theme Toggle Button -->
@@ -160,3 +160,4 @@
     </script>
 </body>
 </html>
+
