--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
                 <!-- Education -->
                 <h3>Education</h3>
                 <ul>
-                    <li>Bachelor of Electrical Engineering, Minor in Economics, McGill University, Sep. 2021 – May 2025</li>
+                    <li>Bachelor of Electrical Engineering, Minor in Economics, McGill University, Sep. 2021 – Present</li>
                 </ul>
 
                 <!-- Work Experience -->
